prevent line wrapping in firefox

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 #spritz_container{
     background-color: #002b36;
     /* 600px+; small tablet portrait */
-    width: 420px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     line-height: 43px;
